@@ -1,3 +1,6 @@
+  * doc/runscripts.html: add contributed run scripts (thx Stefan Karrmann,
+    Kevin Berry, Karl Chen).
+
 runit 1.2.0
 Fri, 17 Dec 2004 21:08:50 +0000
   * doc/upgrade.html: typo.
